# QRCodeGen

./: .gitignore  README.md  pyproject.toml  qrcodegen.py
app/: app.py
app/assets/: style.css
