[tool.poetry]
name = "qrcodegen"
version = "0.1.0"
description = ""
authors = ["lc3267 <melvin.strobl@kit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.4.2"
pillow = "^9.5.0"
dash = {extras = ["diskcache"], version = "^2.17.1"}
dash-bootstrap-components = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
